tests/not_in_math_mode.expected
File: not_in_math_mode.tex

Error on line 4: String _ is valid only in math mode.
