tests/not_in_math_mode.tex
\documentclass{article}

\begin{document}
_
\end{document}
